pkglib_LTLIBRARIES = liboxygen.la
AM_CPPFLAGS = -I${top_srcdir}/lib

liboxygen_la_SOURCES = \
agentaspect/agentaspect.cpp \
agentaspect/agentaspect_c.cpp \
agentaspect/collisionperceptor.cpp \
agentaspect/collisionperceptor_c.cpp \
agentaspect/effector.cpp \
agentaspect/effector_c.cpp \
agentaspect/forceeffector.cpp \
agentaspect/forceeffector_c.cpp \
agentaspect/perceptor.cpp \
agentaspect/perceptor_c.cpp \
controlaspect/controlaspect.cpp \
controlaspect/controlaspect_c.cpp \
physicsserver/body.cpp \
physicsserver/body_c.cpp \
physicsserver/collider.cpp \
physicsserver/collider_c.cpp \
physicsserver/odeobject.cpp \
physicsserver/odeobject_c.cpp \
physicsserver/physicsserver.cpp \
physicsserver/physicsserver_c.cpp \
physicsserver/planecollider.cpp \
physicsserver/planecollider_c.cpp \
physicsserver/space.cpp \
physicsserver/space_c.cpp \
physicsserver/spherecollider.cpp \
physicsserver/spherecollider_c.cpp \
physicsserver/world.cpp \
physicsserver/world_c.cpp \
sceneserver/basenode.cpp \
sceneserver/basenode_c.cpp \
sceneserver/camera.cpp \
sceneserver/camera_c.cpp \
sceneserver/fpscontroller.cpp \
sceneserver/fpscontroller_c.cpp \
sceneserver/indexbuffer.cpp \
sceneserver/scene.cpp \
sceneserver/scene_c.cpp \
sceneserver/sceneserver.cpp \
sceneserver/sceneserver_c.cpp \
sceneserver/transform.cpp \
sceneserver/transform_c.cpp

liboxygen_la_CXXFLAGS = -O2

nobase_pkginclude_HEADERS = \
agentaspect/agentaspect.h \
agentaspect/collisionperceptor.h \
agentaspect/effector.h \
agentaspect/forceeffector.h \
agentaspect/perceptor.h \
controlaspect/controlaspect.h \
physicsserver/body.h \
physicsserver/collider.h \
physicsserver/odeobject.h \
physicsserver/physicsserver.h \
physicsserver/planecollider.h \
physicsserver/posbody.h \
physicsserver/space.h \
physicsserver/spherecollider.h \
physicsserver/world.h \
sceneserver/basenode.h \
sceneserver/camera.h \
sceneserver/fpscontroller.h \
sceneserver/indexbuffer.h \
sceneserver/scene.h \
sceneserver/sceneserver.h \
sceneserver/transform.h
